Add global variables, base styles, icons and components of header

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="shortcut icon" href="https://www.youtube.com/s/desktop/6277211c/img/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="icons/style.css">
-    <title>YouTgit ube</title>
+    <title>YouTube</title>
 </head>
 <body>
     <header class="main-header">
@@ -22,7 +22,16 @@
         </div>
 
         <!-- Middle -->
-        <div>
+        <div class="middle place-center">
+            <form class="form-search place-center" action="#">
+                <input 
+                type="search" 
+                placeholder="Buscar" 
+                class="input">
+                <button 
+                data-tooltip="Buscar"
+                class="submit icon-search"></button>
+            </form>
             <button 
             data-tooltip="Haz búsquedas por voz"
             class="action-button icon-microphone">
@@ -43,11 +52,13 @@
             data-tooltip="Notificaciones"
             class="action-button icon-bell">
             </button>
-            <div class="user-avatar">
-                <img
-                class="image" 
-                src="https://cdn.hobbyconsolas.com/sites/navi.axelspringer.es/public/styles/480/public/media/image/2022/10/super-mario-bros-pelicula-2835413.jpg?itok=qerwDzRh" 
-                alt="Avatar">
+            <div class="user">
+                <div class="user-avatar">
+                    <img
+                    class="image" 
+                    src="https://cdn.hobbyconsolas.com/sites/navi.axelspringer.es/public/styles/480/public/media/image/2022/10/super-mario-bros-pelicula-2835413.jpg?itok=qerwDzRh" 
+                    alt="Avatar">
+                </div>
             </div>
         </div>
 
