--- a/index.html
+++ b/index.html
@@ -65,7 +65,22 @@
     </header>
 
     <div class="main-sidebar">
-        
+        <nav class="main-nav">
+            <ul>
+                <li>
+                    <a href="#" class="link is-active">
+                        <span class="icon icon-home"></span>
+                        <span>Inicio</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="#" class="link">
+                        <span class="icon icon-home"></span>
+                        <span>Explorar</span>
+                    </a>
+                </li>
+            </ul>
+        </nav>
     </div>
 </body>
 </html>
