--- a/index.html
+++ b/index.html
@@ -73,10 +73,76 @@
                         <span>Inicio</span>
                     </a>
                 </li>
+
                 <li>
                     <a href="#" class="link">
-                        <span class="icon icon-home"></span>
+                        <span class="icon icon-explore"></span>
                         <span>Explorar</span>
+                    </a>
+                </li>
+
+                <li>
+                    <a href="#" class="link">
+                        <span class="icon icon-suscriptions"></span>
+                        <span>Suscripciones</span>
+                    </a>
+                </li>
+
+                <li>
+                    <a href="#" class="link">
+                        <span class="icon icon-yt-logo"></span>
+                        <span>Originals</span>
+                    </a>
+                </li>
+
+                <li>
+                    <a href="#" class="link">
+                        <span class="icon icon-music"></span>
+                        <span>Youtube Music</span>
+                    </a>
+                </li>
+            </ul>
+            <hr>
+            <ul>
+                <li>
+                    <a href="#" class="link">
+                        <span class="icon icon-library"></span>
+                        <span>Biblioteca</span>
+                    </a>
+                </li>
+
+                <li>
+                    <a href="#" class="link">
+                        <span class="icon icon-history"></span>
+                        <span>Historial</span>
+                    </a>
+                </li>
+
+                <li>
+                    <a href="#" class="link">
+                        <span class="icon icon-square-triangle"></span>
+                        <span>Mis videos</span>
+                    </a>
+                </li>
+
+                <li>
+                    <a href="#" class="link">
+                        <span class="icon icon-clock"></span>
+                        <span>Ver más tarde</span>
+                    </a>
+                </li>
+
+                <li>
+                    <a href="#" class="link">
+                        <span class="icon icon-like"></span>
+                        <span>Videos que me gustan</span>
+                    </a>
+                </li>
+
+                <li>
+                    <a href="#" class="link">
+                        <span class="icon icon-down"></span>
+                        <span>Mostrar más</span>
                     </a>
                 </li>
             </ul>
